--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -2,16 +2,19 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-top: 1vw;
 }
 
 .explore-menu h1{
     color: #262626;
     font-weight: 500;
+    font-size: max(2.2vw, 20px);
 }
 
 .explore-menu-text{
-    max-width: 60%;
+    max-width: 70%;
     color: #808080;
+    font-size: min(1.6vw,20px);
 }
 
 .explore-menu-list{
@@ -20,12 +23,24 @@
     align-items: center;
     gap: 30px;
     text-align: center;
-    margin: 20px;
+    margin-top: 1vw;
     overflow-x: scroll;
+    width: 100%;
+    
 }
 
-.explore-menu-list::-webkit-scrollbar{
-    display: none;
+.explore-menu-list::-webkit-scrollbar {
+    height: 8px;
+    overflow-x: hidden;
+}
+
+.explore-menu-list::-webkit-scrollbar-thumb {
+    background: #888;  
+    border-radius: 4px;
+}
+
+.explore-menu-list::-webkit-scrollbar-track {
+    background: #f1f1f1;  
 }
 
 .explore-menu-list-item img{
@@ -38,6 +53,7 @@
 
 .explore-menu-list-item p{
     margin-top: 10px;
+    margin-bottom: 15px;
     color: #747474;
     font-size: max(1.4vw, 16px);
     cursor: pointer;
@@ -53,4 +69,11 @@
 .explore-menu-list-item .active{
     border: 4px solid tomato;
     padding: 2px;
+}
+
+@media (max-width:1050px){
+    .explore-menu-text{
+        max-width: 100%;
+        font-size: 14px;
+    }
 }
