--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,10 +5,11 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Outfit;
+  scroll-behavior: smooth;
 }
 
 body{
-  min-height: 100vh;
+  min-height: 100vw;
 }
 
 a{
