--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -10,17 +10,138 @@
     font-size: max(1vw, 12px);
 }
 
+.cart-items-title p{
+    margin-bottom: -11px;
+}
+
+.cart-items-title button{
+    margin-bottom: -11px;
+}
+
+.cart-items-item .quantity{
+    margin-left: 1.6vw;
+}
+
+.cart-items-item .price{
+    margin-left: 3px;
+}
+
+.cart-items-item .total{
+    margin-left: 4px;
+}
+
 .cart-items-item{
     margin: 10px 0px;
     color: black;
 }
 
 .cart-items-item img{
-    width: 80px;
+    width: max(65px,7vw);
+    border-radius: 20px;
 }
 
 .cart hr{
     height: 1px;
     background-color: #e2e2e2;
     border: none;
+}
+
+.cart-items-item .cross{
+    cursor: pointer;
+    margin-left: 1vw;
+    font-size: 18px;
+    width: 30px;
+    height: 30px;
+    background-color: tomato;
+    border-radius: 5px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0; 
+    line-height: 1; 
+}
+
+.cart-bottom{
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+    gap: max(12vw, 20px);
+}
+
+.cart-total{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.cart-total-details{
+    display: flex;
+    justify-content: space-between;
+    color: #555;
+}
+
+.cart-total hr{
+    margin: 10px 0px;
+}
+
+.cart-total button{
+    border: none;
+    background-color: tomato;
+    color: white;
+    width: max(15vw, 200px);
+    padding: 12px 0px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.cart-promocode{
+    flex: 1;
+}
+
+.cart-promocode{
+    color: #555;
+}
+
+.cart-promocode-input{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #eaeaea;
+    border-radius: 4px;
+}
+
+.cart-promocode-input input{
+    background: transparent;
+    border: none;
+    outline: none;
+    padding-left: 10px;
+}
+
+.cart-promocode-input button{
+    width: max(10vw, 150px);
+    padding: 12px 5px;
+    background-color: black;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.cart-no-products{
+    padding: 14vw 20px;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width:750px){
+    .cart-bottom{
+        flex-direction: column-reverse;
+    }
+    .cart-promocode{
+        justify-content: start;
+    }
+
 }
