--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -73,6 +73,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    margin-bottom: 110px;
     gap: 20px;
 }
 
@@ -134,6 +135,9 @@
     padding: 14vw 20px;
     display: flex;
     justify-content: center;
+    margin-bottom: 150px;
+    font-size: 1.5vw;
+    color: tomato;
 }
 
 @media (max-width:750px){
